day 15 of challenge _python
Microsoft Windows [version 10.0.19045.6159]
(c) Microsoft Corporation. Tous droits réservés.

C:\Users\BOSSSA CENTER>python
Python 3.13.2 (tags/v3.13.2:4f8bb39, Feb  4 2025, 15:23:48) [MSC v.1942 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> print 'my name is gloria'
  File "<python-input-0>", line 1
    print 'my name is gloria'
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
>>> print ('my name is gloria')
my name is gloria
>>> print(age)
Traceback (most recent call last):
  File "<python-input-2>", line 1, in <module>
    print(age)
          ^^^
NameError: name 'age' is not defined
>>> age = 19
>>> print(age)
19
>>> numbers = [1, 2, 3, 4, 5]
>>> numbers[6]
Traceback (most recent call last):
  File "<python-input-6>", line 1, in <module>
    numbers[6]
    ~~~~~~~^^^
IndexError: list index out of range
>>> numbers[4]
5
>>> import maths
Traceback (most recent call last):
  File "<python-input-8>", line 1, in <module>
    import maths
ModuleNotFoundError: No module named 'maths'
>>> import math
>>> math.PI
Traceback (most recent call last):
  File "<python-input-10>", line 1, in <module>
    math.PI
AttributeError: module 'math' has no attribute 'PI'
>>> math.pi
3.141592653589793
>>> users = {'name':'Asab', 'age':250, 'country':'Finland'}
>>> users['name']
'Asab'
>>> users['county']
Traceback (most recent call last):
  File "<python-input-14>", line 1, in <module>
    users['county']
    ~~~~~^^^^^^^^^^
KeyError: 'county'
>>> users['country']
'Finland'
>>> '10' + 9
Traceback (most recent call last):
  File "<python-input-16>", line 1, in <module>
    '10' + 9
    ~~~~~^~~
TypeError: can only concatenate str (not "int") to str
>>> int('10') + 9
19
>>> flaot('10') + 9
Traceback (most recent call last):
  File "<python-input-18>", line 1, in <module>
    flaot('10') + 9
    ^^^^^
NameError: name 'flaot' is not defined. Did you mean: 'float'?
>>> float('10') + 9
19.0
>>> 4 + '6'
Traceback (most recent call last):
  File "<python-input-20>", line 1, in <module>
    4 + '6'
    ~~^~~~~
TypeError: unsupported operand type(s) for +: 'int' and 'str'
>>> 4 + int('6')
10
>>> 4 + float('6')
10.0
>>> from math import square
Traceback (most recent call last):
  File "<python-input-23>", line 1, in <module>
    from math import square
ImportError: cannot import name 'square' from 'math' (unknown location)
>>> from math import sqrt
>>> sqrt(25)
5.0
>>> int('2a')
Traceback (most recent call last):
  File "<python-input-26>", line 1, in <module>
    int('2a')
    ~~~^^^^^^
ValueError: invalid literal for int() with base 10: '2a'
>>> 19 / 0
Traceback (most recent call last):
  File "<python-input-27>", line 1, in <module>
    19 / 0
    ~~~^~~
ZeroDivisionError: division by zero
>>>
